# gemu

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  a.json  default.nix  flake.nix  shell.nix
.github/workflows/: tests.yml
scripts/: generate_opcode_test.js
src/: boot_rom.h  control.h  cpu.c  cpu.h  data.c  data.h  frontend.c  frontend.h  game_boy.c  game_boy.h  instructions.c  instructions.h  log.c  log.h  macros.h  main.c  mapper.c  mapper.h  num.c  num.h  sdl.c  sdl.h  stdinc.h
src/common/: control.c  control.h  log.c  log.h  num.c  num.h
src/core/: boot_rom.h  cpu.c  cpu.h  data.c  data.h  game_boy.c  game_boy.h
src/core/cpu/: cpu.c  cpu.h  instructions.c  instructions.h
src/frontend/: boot_rom.h  frontend.c  frontend.h  log.c  log.h  main.c  sdl.c  sdl.h
src/lib/: log.h  num.h
tests/: CMakeLists.txt  test_cpu.c  test_cpu_opcodes.c  test_num.c
tests/common/: test_num.c
tests/core/: test_cpu.c  test_cpu_opcodes.c
